<resources>
    <string name="app_name">HomeWork</string>


    # Buttons
    <string name="inverse_button">inverse</string>
    <string name="show_image">show image</string>
    <string name="create_pie_diagram">crate pie chart</string>

    //Menu
    <string name="homeWork1">homework 1</string>
    <string name="homeWork2">homework 2</string>
    <string name="homeWork3">homework 3</string>
    <string name="homeWork4">homework 4</string>
    <string name="homeWork5">homework 5</string>
    <string name="homeWork6">homework 6</string>


    # Strings
    <string name="text_view_one">cat</string>
    <string name="text_view_two">dog</string>
    <string name="hint_pie_part">Set Value</string>


    # Activities
    <string name="title_activity_start">Menu</string>
    <string name="title_activity_lesson_one">Home Work 1</string>

    # Hints
    <string name="image_link">Put your link</string>
</resources>
