<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.olgagoo.debug.homework.homework_2.StartActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/menu_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Active_Button"
        android:text="@string/homeWork1"
        />

    <Button
        android:id="@+id/menu_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Active_Button"
        android:text="@string/homeWork2"
        />

    <Button
        android:id="@+id/menu_btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Active_Button"
        android:text="@string/homeWork3"
        />

    <Button
        android:id="@+id/menu_btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Active_Button"
        android:text="@string/homeWork4"
        />
    <Button
        android:id="@+id/menu_btn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Active_Button"
        android:text="@string/homeWork5"
        />

</LinearLayout>
