<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homework.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:background="@color/selected_text_background"
        android:text="@string/text_view_one"
        android:textAlignment="center"
        android:textColor="@color/selected_text"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:background="@color/unselected_text_background"
        android:text="@string/text_view_two"
        android:textAlignment="center"
        android:textColor="@color/unselected_text"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/inverse_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/inverse_button"
        android:textAlignment="center"
        style="@style/Active_Button" />


</LinearLayout>